--- a/packages/kbn-ui-shared-deps/package.json
+++ b/packages/kbn-ui-shared-deps/package.json
@@ -26,20 +26,22 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-intl": "^2.8.0",
+    "react-is": "^16.8.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.3",
     "rxjs": "^6.5.5",
+    "styled-components": "^5.1.0",
     "symbol-observable": "^1.2.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@kbn/babel-preset": "1.0.0",
     "@kbn/dev-utils": "1.0.0",
-    "loader-utils": "^1.2.3",
-    "val-loader": "^1.1.1",
     "css-loader": "^3.4.2",
     "del": "^5.1.0",
+    "loader-utils": "^1.2.3",
+    "val-loader": "^1.1.1",
     "webpack": "^4.41.5"
   }
 }
