--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "@elastic/apm-rum": "^5.2.0",
     "@elastic/charts": "19.5.2",
     "@elastic/datemath": "5.0.3",
-    "@elastic/elasticsearch": "^7.7.1",
+    "@elastic/elasticsearch": "7.8.0",
     "@elastic/ems-client": "7.9.3",
     "@elastic/eui": "24.1.0",
     "@elastic/filesaver": "1.1.2",
