--- a/x-pack/package.json
+++ b/x-pack/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^4.1.0",
+    "@elastic/safer-lodash-set": "0.0.0",
     "@kbn/dev-utils": "1.0.0",
     "@kbn/es": "1.0.0",
     "@kbn/expect": "1.0.0",
