--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@elastic/apm-rum": "^5.2.0",
     "@elastic/charts": "19.8.1",
     "@elastic/datemath": "5.0.3",
+    "@elastic/elasticsearch": "7.8.0",
     "@elastic/ems-client": "7.9.3",
     "@elastic/eui": "24.1.0",
     "@elastic/filesaver": "1.1.2",
@@ -294,7 +295,6 @@
   "devDependencies": {
     "@babel/parser": "^7.10.2",
     "@babel/types": "^7.10.2",
-    "@elastic/elasticsearch": "^7.4.0",
     "@elastic/eslint-config-kibana": "0.15.0",
     "@elastic/eslint-plugin-eui": "0.0.2",
     "@elastic/github-checks-reporter": "0.0.20b3",
