--- a/packages/elastic-safer-lodash-set/package.json
+++ b/packages/elastic-safer-lodash-set/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "lint": "dependency-check --no-dev package.json set.js setWith.js fp/*",
     "test": "npm run lint && tape test/*.js && npm run test:types",
-    "test:types": "tsd",
+    "test:types": "./scripts/tsd.sh",
     "update": "./scripts/update.sh",
     "save_state": "./scripts/save_state.sh"
   },
