Extend tsconfig.json from root

--- a/packages/elastic-safer-lodash-set/tsconfig.json
+++ b/packages/elastic-safer-lodash-set/tsconfig.json
@@ -1,8 +1,9 @@
 {
-    "include": [
-        "**/*"
-    ],
-    "exclude": [
-        "**/*.test-d.ts"
-    ]
+  "extends": "../../tsconfig.json",
+  "include": [
+    "**/*"
+  ],
+  "exclude": [
+    "**/*.test-d.ts"
+  ]
 }
