--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Start backport",
-      "program": "${workspaceRoot}/src/index.ts",
+      "program": "${workspaceRoot}/src/entrypoint.cli.ts",
       "runtimeArgs": ["-r", "ts-node/register/transpile-only"],
       "args": ["--branch=6.3", "--upstream=sqren/backport-demo"],
       "console": "integratedTerminal"
