--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "@elastic/ui-ace": "0.2.3",
     "@hapi/boom": "^7.4.11",
     "@hapi/good-squeeze": "^6.0.0",
+    "@hapi/h2o2": "^8.3.2",
     "@hapi/hoek": "^6.2.4",
     "@hapi/inert": "^5.2.2",
     "@hapi/oppsy": "^2.1.2",
@@ -189,7 +190,6 @@
     "glob": "^7.1.2",
     "glob-all": "^3.1.0",
     "globby": "^8.0.1",
-    "h2o2": "^8.2.0",
     "handlebars": "4.7.7",
     "hapi": "^17.8.5",
     "hjson": "3.1.0",
