Add server side plugin with preview field endpoint

--- a/src/plugins/index_pattern_field_editor/tsconfig.json
+++ b/src/plugins/index_pattern_field_editor/tsconfig.json
@@ -8,7 +8,9 @@
     "declarationMap": true
   },
   "include": [
+    "common/**/*",
     "public/**/*",
+    "server/**/*",
   ],
   "references": [
     { "path": "../../core/tsconfig.json" },
