--- a/package.json
+++ b/package.json
@@ -458,7 +458,7 @@
     "@kbn/plugin-generator": "link:bazel-bin/packages/kbn-plugin-generator/npm_module",
     "@kbn/plugin-helpers": "link:packages/kbn-plugin-helpers",
     "@kbn/pm": "link:packages/kbn-pm",
-    "@kbn/storybook": "link:packages/kbn-storybook",
+    "@kbn/storybook": "link:bazel-bin/packages/kbn-storybook/npm_module",
     "@kbn/telemetry-tools": "link:bazel-bin/packages/kbn-telemetry-tools/npm_module",
     "@kbn/test": "link:packages/kbn-test",
     "@kbn/test-subj-selector": "link:packages/kbn-test-subj-selector",
