--- a/package.json
+++ b/package.json
@@ -448,7 +448,7 @@
     "@kbn/babel-preset": "link:bazel-bin/packages/kbn-babel-preset/npm_module",
     "@kbn/cli-dev-mode": "link:packages/kbn-cli-dev-mode",
     "@kbn/dev-utils": "link:bazel-bin/packages/kbn-dev-utils/npm_module",
-    "@kbn/docs-utils": "link:packages/kbn-docs-utils",
+    "@kbn/docs-utils": "link:bazel-bin/packages/kbn-docs-utils/npm_module",
     "@kbn/es": "link:bazel-bin/packages/kbn-es/npm_module",
     "@kbn/es-archiver": "link:packages/kbn-es-archiver",
     "@kbn/eslint-import-resolver-kibana": "link:bazel-bin/packages/kbn-eslint-import-resolver-kibana/npm_module",
