--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -16,6 +16,7 @@ filegroup(
       "//packages/kbn-config-schema:build",
       "//packages/kbn-crypto:build",
       "//packages/kbn-dev-utils:build",
+      "//packages/kbn-docs-utils:build",
       "//packages/kbn-es:build",
       "//packages/kbn-eslint-import-resolver-kibana:build",
       "//packages/kbn-eslint-plugin-eslint:build",
