--- a/packages/kbn-securitysolution-io-ts-types/BUILD.bazel
+++ b/packages/kbn-securitysolution-io-ts-types/BUILD.bazel
@@ -27,6 +27,7 @@ NPM_MODULE_EXTRA_FILES = [
 ]
 
 SRC_DEPS = [
+  "//packages/kbn-securitysolution-io-ts-utils",
   "//packages/elastic-datemath",
   "@npm//fp-ts",
   "@npm//io-ts",
