--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "@mapbox/mapbox-gl-draw": "^1.2.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
     "@mapbox/vector-tile": "1.3.1",
+    "@reduxjs/toolkit": "^1.5.1",
     "@scant/router": "^0.1.1",
     "@slack/webhook": "^5.0.4",
     "@turf/along": "6.0.1",
@@ -168,6 +169,8 @@
     "@turf/distance": "6.0.1",
     "@turf/helpers": "6.0.1",
     "@turf/length": "^6.0.2",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-mock-store": "^1.0.2",
     "JSONStream": "1.3.5",
     "abort-controller": "^3.0.0",
     "abortcontroller-polyfill": "^1.4.0",
@@ -363,6 +366,8 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-observable": "^1.2.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
