Fix tsconfig issue

--- a/src/plugins/index_pattern_field_editor/tsconfig.json
+++ b/src/plugins/index_pattern_field_editor/tsconfig.json
@@ -8,6 +8,8 @@
     "declarationMap": true
   },
   "include": [
+    "../../../typings/**/*",
+    "__jest__/**/*",
     "common/**/*",
     "public/**/*",
     "server/**/*",
