Moved the screenshot mode header definition to common Added a server-side example for screenshot mode Export the screenshot mode header in both public and server

--- a/examples/screenshot_mode_example/tsconfig.json
+++ b/examples/screenshot_mode_example/tsconfig.json
@@ -9,6 +9,7 @@
     "public/**/*.ts",
     "public/**/*.tsx",
     "common/**/*.ts",
+    "server/**/*.ts",
     "../../typings/**/*"
   ],
   "exclude": [],
