--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -27,6 +27,7 @@ filegroup(
       "//packages/kbn-securitysolution-io-ts-utils:build",
       "//packages/kbn-securitysolution-utils:build",
       "//packages/kbn-securitysolution-es-utils:build",
+      "//packages/kbn-server-http-tools:build",
       "//packages/kbn-std:build",
       "//packages/kbn-telemetry-tools:build",
       "//packages/kbn-tinymath:build",
