--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -32,6 +32,7 @@ filegroup(
       "//packages/kbn-securitysolution-utils:build",
       "//packages/kbn-securitysolution-es-utils:build",
       "//packages/kbn-std:build",
+      "//packages/kbn-telemetry-tools:build",
       "//packages/kbn-tinymath:build",
       "//packages/kbn-utility-types:build",
       "//packages/kbn-utils:build",
