--- a/packages/kbn-i18n/tsconfig.browser.json
+++ b/packages/kbn-i18n/tsconfig.browser.json
@@ -1,18 +1,13 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.browser.json",
   "compilerOptions": {
     "allowJs": true,
     "incremental": true,
-    "declarationDir": "./target/types",
-    "outDir": "./target/node",
-    "declaration": true,
-    "declarationMap": true,
+    "outDir": "./target/web",
+    "declaration": false,
+    "isolatedModules": true,
     "sourceMap": true,
-    "sourceRoot": "../../../../../packages/kbn-i18n/src",
-    "types": [
-      "jest",
-      "node"
-    ]
+    "sourceRoot": "../../../../../packages/kbn-i18n/src"
   },
   "include": [
     "src/**/*.ts",
