--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -3,7 +3,8 @@
 filegroup(
   name = "build",
   srcs = [
-      "//packages/elastic-datemath:build",
+
+    "//packages/elastic-datemath:build",
       "//packages/elastic-eslint-config-kibana:build",
       "//packages/elastic-safer-lodash-set:build",
       "//packages/kbn-ace:build",
@@ -21,6 +22,7 @@ filegroup(
       "//packages/kbn-eslint-import-resolver-kibana:build",
       "//packages/kbn-eslint-plugin-eslint:build",
       "//packages/kbn-expect:build",
+      "//packages/kbn-i18n:build",
       "//packages/kbn-legacy-logging:build",
       "//packages/kbn-logging:build",
       "//packages/kbn-plugin-generator:build",
@@ -30,8 +32,9 @@ filegroup(
       "//packages/kbn-securitysolution-io-ts-list-types:build",
       "//packages/kbn-securitysolution-io-ts-utils:build",
       "//packages/kbn-securitysolution-utils:build",
-      "//packages/kbn-securitysolution-t-grid:build",
       "//packages/kbn-securitysolution-es-utils:build",
+      "//packages/kbn-securitysolution-t-grid:build",
+      "//packages/kbn-server-http-tools:build",
       "//packages/kbn-std:build",
       "//packages/kbn-telemetry-tools:build",
       "//packages/kbn-tinymath:build",
