--- a/packages/kbn-securitysolution-t-grid/BUILD.bazel
+++ b/packages/kbn-securitysolution-t-grid/BUILD.bazel
@@ -29,11 +29,11 @@ NPM_MODULE_EXTRA_FILES = [
 ]
 
 SRC_DEPS = [
+  "//packages/kbn-i18n",
   "@npm//tslib",
   "@npm//d3",
   "@npm//react",
   "@npm//react-beautiful-dnd",
-  "@npm//@kbn/i18n",
   "@npm//@elastic/eui",
   "@npm//react-intl",
   "@npm//polished",
