refact(NA): remove extra pkg_npm target and add specific target folders on @kbn/i18n

--- a/packages/kbn-i18n/tsconfig.browser.json
+++ b/packages/kbn-i18n/tsconfig.browser.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "allowJs": true,
     "incremental": true,
-    "outDir": "./target/web",
+    "outDir": "./target_web",
     "declaration": false,
     "isolatedModules": true,
     "sourceMap": true,
