--- a/packages/kbn-i18n/tsconfig.browser.json
+++ b/packages/kbn-i18n/tsconfig.browser.json
@@ -7,7 +7,8 @@
     "declaration": false,
     "isolatedModules": true,
     "sourceMap": true,
-    "sourceRoot": "../../../../../packages/kbn-i18n/src"
+    "sourceRoot": "../../../../../packages/kbn-i18n/src",
+    "types": ["node"],
   },
   "include": [
     "src/**/*.ts",
