Upgrade from statehood v6.0.9 to @hapi/statehood v6.1.2

--- a/x-pack/package.json
+++ b/x-pack/package.json
@@ -122,6 +122,7 @@
     "@elastic/numeral": "2.3.2",
     "@hapi/boom": "^7.4.11",
     "@hapi/oppsy": "^2.1.2",
+    "@hapi/statehood": "^6.1.2",
     "@kbn/babel-preset": "1.0.0",
     "@kbn/es-query": "1.0.0",
     "@kbn/i18n": "1.0.0",
@@ -254,7 +255,6 @@
     "rxjs": "^6.2.1",
     "semver": "5.1.0",
     "squel": "^5.12.2",
-    "statehood": "^6.0.9",
     "style-it": "2.1.2",
     "styled-components": "3.3.3",
     "tar-fs": "2.1.0",
