--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -26,6 +26,7 @@ filegroup(
       "//packages/kbn-logging:build",
       "//packages/kbn-plugin-generator:build",
       "//packages/kbn-securitysolution-constants:build",
+      "//packages/kbn-securitysolution-list-utils:build",
       "//packages/kbn-securitysolution-io-ts-types:build",
       "//packages/kbn-securitysolution-io-ts-alerting-types:build",
       "//packages/kbn-securitysolution-io-ts-list-types:build",
