--- a/packages/kbn-securitysolution-list-utils/BUILD.bazel
+++ b/packages/kbn-securitysolution-list-utils/BUILD.bazel
@@ -1,8 +1,9 @@
 load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")
 load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "pkg_npm")
 
-PKG_BASE_NAME = "kbn-securitysolution-io-ts-list-types"
-PKG_REQUIRE_NAME = "@kbn/securitysolution-io-ts-list-types"
+PKG_BASE_NAME = "kbn-securitysolution-list-utils"
+
+PKG_REQUIRE_NAME = "@kbn/securitysolution-list-utils"
 
 SOURCE_FILES = glob(
   [
@@ -10,7 +11,7 @@ SOURCE_FILES = glob(
   ],
   exclude = [
     "**/*.test.*",
-    "**/*.mock.*"
+    "**/*.mock.*",
   ],
 )
 
@@ -27,23 +28,15 @@ NPM_MODULE_EXTRA_FILES = [
 ]
 
 SRC_DEPS = [
-  "//packages/kbn-securitysolution-io-ts-types",
-  "//packages/kbn-securitysolution-io-ts-utils",
-  "//packages/elastic-datemath",
-  "@npm//fp-ts",
-  "@npm//io-ts",
-  "@npm//lodash",
-  "@npm//moment",
+  "//packages/kbn-i18n",
+  "//packages/kbn-securitysolution-io-ts-list-types",
+  "//packages/kbn-securitysolution-utils",
   "@npm//tslib",
-  "@npm//uuid",
 ]
 
 TYPES_DEPS = [
-  "@npm//@types/flot",
   "@npm//@types/jest",
-  "@npm//@types/lodash",
   "@npm//@types/node",
-  "@npm//@types/uuid"
 ]
 
 DEPS = SRC_DEPS + TYPES_DEPS
@@ -52,43 +45,43 @@ ts_config(
   name = "tsconfig",
   src = "tsconfig.json",
   deps = [
-    "//:tsconfig.base.json",
+      "//:tsconfig.base.json",
   ],
 )
 
 ts_project(
   name = "tsc",
-  args = ['--pretty'],
   srcs = SRCS,
-  deps = DEPS,
+  args = ["--pretty"],
   declaration = True,
   declaration_map = True,
   incremental = True,
   out_dir = "target",
-  source_map = True,
   root_dir = "src",
+  source_map = True,
   tsconfig = ":tsconfig",
+  deps = DEPS,
 )
 
 js_library(
   name = PKG_BASE_NAME,
-  srcs = NPM_MODULE_EXTRA_FILES,
-  deps = [":tsc"] + DEPS,
   package_name = PKG_REQUIRE_NAME,
+  srcs = NPM_MODULE_EXTRA_FILES,
   visibility = ["//visibility:public"],
+  deps = [":tsc"] + DEPS,
 )
 
 pkg_npm(
   name = "npm_module",
   deps = [
-    ":%s" % PKG_BASE_NAME,
-  ]
+      ":%s" % PKG_BASE_NAME,
+  ],
 )
 
 filegroup(
   name = "build",
   srcs = [
-    ":npm_module",
+      ":npm_module",
   ],
   visibility = ["//visibility:public"],
 )
