--- a/package.json
+++ b/package.json
@@ -68,9 +68,8 @@
     "url": "https://github.com/elastic/kibana.git"
   },
   "resolutions": {
-    "**/@types/node": "14.14.14",
+    "**/@types/node": "14.14.44",
     "**/chokidar": "^3.4.3",
-    "**/cross-fetch/node-fetch": "^2.6.1",
     "**/deepmerge": "^4.2.2",
     "**/fast-deep-equal": "^3.1.1",
     "globby/fast-glob": "3.2.5",
@@ -85,7 +84,7 @@
     "**/react-syntax-highlighter": "^15.3.1",
     "**/react-syntax-highlighter/**/highlight.js": "^10.4.1",
     "**/request": "^2.88.2",
-    "**/trim": "0.0.3",
+    "**/trim": "1.0.1",
     "**/typescript": "4.1.3",
     "**/underscore": "^1.13.1"
   },
@@ -326,7 +325,6 @@
     "react-ace": "^5.9.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-color": "^2.13.8",
-    "react-datetime": "^2.14.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^4.2.9",
     "react-fast-compare": "^2.0.4",
@@ -564,13 +562,14 @@
     "@types/mime": "^2.0.1",
     "@types/mime-types": "^2.1.0",
     "@types/minimatch": "^2.0.29",
+    "@types/minimist": "^1.2.1",
     "@types/mocha": "^8.2.0",
     "@types/mock-fs": "^4.10.0",
     "@types/moment-timezone": "^0.5.12",
     "@types/mustache": "^0.8.31",
     "@types/ncp": "^2.0.1",
     "@types/nock": "^10.0.3",
-    "@types/node": "14.14.14",
+    "@types/node": "14.14.44",
     "@types/node-fetch": "^2.5.7",
     "@types/node-forge": "^0.9.5",
     "@types/nodemailer": "^6.4.0",
