--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "@elastic/ui-ace": "0.2.3",
     "@hapi/boom": "^7.4.11",
     "@hapi/good-squeeze": "^6.0.0",
+    "@hapi/hapi": "^17.9.0",
     "@hapi/hoek": "^6.2.4",
     "@hapi/inert": "^5.2.2",
     "@hapi/oppsy": "^2.1.2",
@@ -191,7 +192,6 @@
     "globby": "^8.0.1",
     "h2o2": "^8.2.0",
     "handlebars": "4.7.7",
-    "hapi": "^17.8.5",
     "hjson": "3.1.0",
     "http-proxy-agent": "^2.1.0",
     "https-proxy-agent": "^5.0.0",
