--- a/x-pack/package.json
+++ b/x-pack/package.json
@@ -26,6 +26,7 @@
     "@types/react": "16.3.14"
   },
   "devDependencies": {
+    "@hapi/hapi": "^17.9.0",
     "@kbn/dev-utils": "1.0.0",
     "@kbn/es": "1.0.0",
     "@kbn/plugin-helpers": "7.1.5",
@@ -84,7 +85,6 @@
     "gulp": "3.9.1",
     "gulp-mocha": "2.2.0",
     "gulp-multi-process": "^1.3.1",
-    "hapi": "^17.8.5",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "jest-styled-components": "^6.2.2",
