Upgrade hapi TypeScript definitions with `@hapi`-namespace

--- a/package.json
+++ b/package.json
@@ -313,8 +313,8 @@
     "@types/glob": "^5.0.35",
     "@types/globby": "^8.0.0",
     "@types/graphql": "^0.13.1",
-    "@types/hapi": "^17.0.18",
     "@types/hapi__boom": "^7.4.1",
+    "@types/hapi__hapi": "npm:@types/hapi@17.0.18",
     "@types/hapi__hoek": "^6.2.0",
     "@types/hapi__podium": "^3.4.1",
     "@types/has-ansi": "^3.0.0",
