--- a/packages/kbn-securitysolution-t-grid/BUILD.bazel
+++ b/packages/kbn-securitysolution-t-grid/BUILD.bazel
@@ -32,6 +32,7 @@ SRC_DEPS = [
   "//packages/kbn-i18n",
   "@npm//tslib",
   "@npm//d3",
+  "@npm//lodash",
   "@npm//react",
   "@npm//react-beautiful-dnd",
   "@npm//@elastic/eui",
@@ -42,6 +43,7 @@ SRC_DEPS = [
 
 TYPES_DEPS = [
   "@npm//@types/jest",
+  "@npm//@types/lodash",
   "@npm//@types/node",
   "@npm//@types/d3",
   "@npm//@types/react",
