--- a/tsconfig.refs.json
+++ b/tsconfig.refs.json
@@ -85,6 +85,7 @@
     { "path": "./x-pack/plugins/lens/tsconfig.json" },
     { "path": "./x-pack/plugins/license_management/tsconfig.json" },
     { "path": "./x-pack/plugins/licensing/tsconfig.json" },
+    { "path": "./x-pack/plugins/lists/tsconfig.json" },
     { "path": "./x-pack/plugins/logstash/tsconfig.json" },
     { "path": "./x-pack/plugins/maps/tsconfig.json" },
     { "path": "./x-pack/plugins/metrics_entities/tsconfig.json" },
