--- a/packages/kbn-interpreter/package.json
+++ b/packages/kbn-interpreter/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "license": "SSPL-1.0 OR Elastic License 2.0",
   "scripts": {
-    "interpreter:peg": "../../node_modules/.bin/pegjs src/common/lib/grammar.peg",
+    "interpreter:peg": "../../node_modules/.bin/peggy src/common/lib/grammar.peggy",
     "build": "node scripts/build",
     "kbn:bootstrap": "node scripts/build --dev",
     "kbn:watch": "node scripts/build --dev --watch"
