--- a/packages/kbn-mapbox-gl/BUILD.bazel
+++ b/packages/kbn-mapbox-gl/BUILD.bazel
@@ -27,17 +27,13 @@ NPM_MODULE_EXTRA_FILES = [
 ]
 
 SRC_DEPS = [
-  "//packages/kbn-dev-utils",
-  "@npm//jest-styled-components",
-  "@npm//node-forge",
+  "@npm//@mapbox/mapbox-gl-rtl-text",
+  "@npm//file-loader",
+  "@npm//mapbox-gl",
 ]
 
 TYPES_DEPS = [
-  "@npm//@types/flot",
-  "@npm//@types/jest",
-  "@npm//@types/node",
-  "@npm//@types/node-forge",
-  "@npm//@types/testing-library__jest-dom",
+  "@npm//@types/mapbox-gl",
 ]
 
 DEPS = SRC_DEPS + TYPES_DEPS
@@ -67,7 +63,7 @@ ts_project(
 js_library(
   name = PKG_BASE_NAME,
   srcs = NPM_MODULE_EXTRA_FILES,
-  deps = [":tsc"] + DEPS,
+  deps = DEPS + [":tsc"],
   package_name = PKG_REQUIRE_NAME,
   visibility = ["//visibility:public"],
 )
