--- a/packages/kbn-mapbox-gl/tsconfig.json
+++ b/packages/kbn-mapbox-gl/tsconfig.json
@@ -7,7 +7,10 @@
     "declarationMap": true,
     "rootDir": "src",
     "sourceMap": true,
-    "sourceRoot": "../../../../packages/kbn-mapbox-gl/src"
+    "sourceRoot": "../../../../packages/kbn-mapbox-gl/src",
+    "types": []
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*",
+  ]
 }
