--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -24,6 +24,7 @@ filegroup(
       "//packages/kbn-i18n:build",
       "//packages/kbn-legacy-logging:build",
       "//packages/kbn-logging:build",
+      "//packages/kbn-mapbox-gl:build",
       "//packages/kbn-plugin-generator:build",
       "//packages/kbn-securitysolution-list-constants:build",
       "//packages/kbn-securitysolution-io-ts-types:build",
