--- a/.ci/package-testing/Jenkinsfile
+++ b/.ci/package-testing/Jenkinsfile
@@ -2,23 +2,24 @@
 library 'kibana-pipeline-library'
 kibanaLibrary.load()
 kibanaPipeline(timeoutMinutes: 300) {
-  slackNotifications.onFailure(disabled: true) {
-    githubPr.withDefaultPrComments {
-      ciStats.trackBuild {
-        workers.ci(ramDisk: false, name: "package-build", size: 'l', runErrorReporter: false) {
-          withGcpServiceAccount.fromVaultSecret('secret/kibana-issues/dev/ci-artifacts-key', 'value') {
-            kibanaPipeline.bash("test/scripts/jenkins_xpack_package_build.sh", "Package builds")
-          }
+  slackNotifications.onFailure(
+    title: "*<${env.BUILD_URL}|[${params.branch}] Package Testing Failure>*",
+    message: "[${params.branch}/${params.commit}] Package Testing Failure",
+  ) {
+    ciStats.trackBuild {
+      workers.ci(ramDisk: false, name: "package-build", size: 'l', runErrorReporter: false) {
+        withGcpServiceAccount.fromVaultSecret('secret/kibana-issues/dev/ci-artifacts-key', 'value') {
+          kibanaPipeline.bash("test/scripts/jenkins_xpack_package_build.sh", "Package builds")
         }
-        def packageTypes = ['deb', 'docker', 'rpm']
-        def workers = [:]
-        packageTypes.each { type ->
-          workers["package-${type}"] = {
-            testPackage(type)
-          }
-        }
-        parallel(workers)
       }
+      def packageTypes = ['deb', 'docker', 'rpm']
+      def workers = [:]
+      packageTypes.each { type ->
+        workers["package-${type}"] = {
+          testPackage(type)
+        }
+      }
+      parallel(workers)
     }
   }
 }
