--- a/src/plugins/index_pattern_field_editor/tsconfig.json
+++ b/src/plugins/index_pattern_field_editor/tsconfig.json
@@ -8,7 +8,11 @@
     "declarationMap": true
   },
   "include": [
+    "../../../typings/**/*",
+    "__jest__/**/*",
+    "common/**/*",
     "public/**/*",
+    "server/**/*",
   ],
   "references": [
     { "path": "../../core/tsconfig.json" },
