--- a/renovate.json5
+++ b/renovate.json5
@@ -44,17 +44,17 @@
       {
         groupName: '@elastic/elasticsearch',
         packageNames: ['@elastic/elasticsearch'],
-        reviewers: ['team:kibana-operations'],
+        reviewers: ['team:kibana-operations', 'team:kibana-core'],
         matchBaseBranches: ['master'],
-        labels: ['release_note:skip', 'v8.0.0', 'Team:Operations', 'backport:skip'],
+        labels: ['release_note:skip', 'v8.0.0', 'Team:Operations', 'Team:Core', 'backport:skip'],
         enabled: true,
       },
       {
         groupName: '@elastic/elasticsearch',
         packageNames: ['@elastic/elasticsearch'],
-        reviewers: ['team:kibana-operations'],
+        reviewers: ['team:kibana-operations', 'team:kibana-core'],
         matchBaseBranches: ['7.x'],
-        labels: ['release_note:skip', 'v7.14.0', 'Team:Operations', 'backport:skip'],
+        labels: ['release_note:skip', 'v7.14.0', 'Team:Operations', 'Team:Core', 'backport:skip'],
         enabled: true,
       },
       {
