--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -25,6 +25,7 @@ filegroup(
       "//packages/kbn-legacy-logging:build",
       "//packages/kbn-logging:build",
       "//packages/kbn-mapbox-gl:build",
+      "//packages/kbn-monaco:build",
       "//packages/kbn-plugin-generator:build",
       "//packages/kbn-securitysolution-list-constants:build",
       "//packages/kbn-securitysolution-io-ts-types:build",
