[ML] Add time buckets & fix dependencies

--- a/x-pack/plugins/file_data_visualizer/tsconfig.json
+++ b/x-pack/plugins/file_data_visualizer/tsconfig.json
@@ -14,7 +14,8 @@
     { "path": "../../../src/plugins/usage_collection/tsconfig.json" },
     { "path": "../security/tsconfig.json" },
     { "path": "../file_upload/tsconfig.json" },
+    { "path": "../lens/tsconfig.json" },
     { "path": "../maps/tsconfig.json" },
-    { "path": "../../../src/plugins/embeddable/tsconfig.json" },
+    { "path": "../../../src/plugins/embeddable/tsconfig.json" }
   ]
 }
