--- a/package.json
+++ b/package.json
@@ -155,8 +155,8 @@
     "@loaders.gl/core": "^2.3.1",
     "@loaders.gl/json": "^2.3.1",
     "@mapbox/geojson-rewind": "^0.5.0",
-    "@mapbox/mapbox-gl-draw": "^1.2.0",
-    "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
+    "@mapbox/mapbox-gl-draw": "1.3.0",
+    "@mapbox/mapbox-gl-rtl-text": "0.2.3",
     "@mapbox/vector-tile": "1.3.1",
     "@scant/router": "^0.1.1",
     "@slack/webhook": "^5.0.4",
@@ -282,7 +282,7 @@
     "lru-cache": "^4.1.5",
     "lz-string": "^1.4.4",
     "mapbox-gl": "1.13.1",
-    "mapbox-gl-draw-rectangle-mode": "^1.0.4",
+    "mapbox-gl-draw-rectangle-mode": "1.0.4",
     "markdown-it": "^10.0.0",
     "md5": "^2.1.0",
     "memoize-one": "^5.0.0",
@@ -559,7 +559,7 @@
     "@types/loader-utils": "^1.1.3",
     "@types/lodash": "^4.14.159",
     "@types/lru-cache": "^5.1.0",
-    "@types/mapbox-gl": "^1.9.1",
+    "@types/mapbox-gl": "1.13.1",
     "@types/markdown-it": "^0.0.7",
     "@types/md5": "^2.2.0",
     "@types/memoize-one": "^4.1.0",
