--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -150,6 +150,8 @@
 #CC# /x-pack/plugins/file_upload @elastic/kibana-gis
 /src/plugins/tile_map/ @elastic/kibana-gis
 /src/plugins/region_map/ @elastic/kibana-gis
+/packages/kbn-mapbox-gl @elastic/kibana-gis
+
 
 # Operations
 /src/dev/ @elastic/kibana-operations
