--- a/.buildkite/on_merge.yml
+++ b/.buildkite/on_merge.yml
@@ -1,21 +1,21 @@
 env:
   GITHUB_COMMIT_STATUS_ENABLED: 'true'
-  GITHUB_COMMIT_STATUS_CONTEXT: 'buildkite/kibana-ci-baseline'
+  GITHUB_COMMIT_STATUS_CONTEXT: 'buildkite/on-merge'
 steps:
   - command: .buildkite/scripts/lifecycle/pre_build.sh
     label: Pre-Build
 
   - wait
 
-  - command: .buildkite/scripts/steps/baseline.sh
+  - command: .buildkite/scripts/steps/on_merge_build_and_metrics.sh
     label: Default Build and Metrics
     agents:
-      queue: baseline
+      queue: c2-8
 
-  - command: .buildkite/scripts/steps/baseline_ts_refs_api_docs.sh
+  - command: .buildkite/scripts/steps/on_merge_ts_refs_api_docs.sh
     label: Build TS Refs and Check Public API Docs
     agents:
-      queue: baseline-small
+      queue: c2-4
 
   - wait: ~
     continue_on_failure: true
