chore(NA): moving @kbn/ui-shared-deps into bazel

--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "@kbn/std": "link:bazel-bin/packages/kbn-std/npm_module",
     "@kbn/tinymath": "link:bazel-bin/packages/kbn-tinymath/npm_module",
     "@kbn/ui-framework": "link:packages/kbn-ui-framework",
-    "@kbn/ui-shared-deps": "link:packages/kbn-ui-shared-deps",
+    "@kbn/ui-shared-deps": "link:bazel-bin/packages/kbn-ui-shared-deps/npm_module",
     "@kbn/utility-types": "link:bazel-bin/packages/kbn-utility-types/npm_module",
     "@kbn/utils": "link:bazel-bin/packages/kbn-utils/npm_module",
     "@loaders.gl/core": "^2.3.1",
@@ -288,6 +288,7 @@
     "mapbox-gl-draw-rectangle-mode": "1.0.4",
     "markdown-it": "^10.0.0",
     "md5": "^2.1.0",
+    "mdast-util-to-hast": "10.0.1",
     "memoize-one": "^5.0.0",
     "mime": "^2.4.4",
     "mime-types": "^2.1.27",
