--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "@mapbox/mapbox-gl-draw": "1.3.0",
     "@mapbox/mapbox-gl-rtl-text": "0.2.3",
     "@mapbox/vector-tile": "1.3.1",
+    "@reduxjs/toolkit": "^1.5.1",
     "@scant/router": "^0.1.1",
     "@slack/webhook": "^5.0.4",
     "@turf/along": "6.0.1",
@@ -170,6 +171,7 @@
     "@turf/distance": "6.0.1",
     "@turf/helpers": "6.0.1",
     "@turf/length": "^6.0.2",
+    "@types/redux-logger": "^3.0.8",
     "JSONStream": "1.3.5",
     "abort-controller": "^3.0.0",
     "abortcontroller-polyfill": "^1.4.0",
@@ -362,6 +364,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-observable": "^1.2.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
