--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,9 +4,11 @@
     "paths": {
       // Setup @kbn paths for Bazel compilations
       "@kbn/*": [
+        "node_modules/@kbn/*",
         "bazel-out/darwin-fastbuild/bin/packages/kbn-*",
         "bazel-out/k8-fastbuild/bin/packages/kbn-*",
         "bazel-out/x64_windows-fastbuild/bin/packages/kbn-*",
+        "bazel-out/host/bin/packages/kbn-*",
       ],
       // Allows for importing from `kibana` package for the exported types.
       "kibana": ["./kibana"],
