--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "@kbn/legacy-logging": "link:bazel-bin/packages/kbn-legacy-logging/npm_module",
     "@kbn/logging": "link:bazel-bin/packages/kbn-logging/npm_module",
     "@kbn/mapbox-gl": "link:bazel-bin/packages/kbn-mapbox-gl/npm_module",
-    "@kbn/monaco": "link:packages/kbn-monaco",
+    "@kbn/monaco": "link:bazel-bin/packages/kbn-monaco/npm_module",
     "@kbn/rule-data-utils": "link:packages/kbn-rule-data-utils",
     "@kbn/securitysolution-es-utils": "link:bazel-bin/packages/kbn-securitysolution-es-utils/npm_module",
     "@kbn/securitysolution-io-ts-alerting-types": "link:bazel-bin/packages/kbn-securitysolution-io-ts-alerting-types/npm_module",
