chore(NA): fix typechecking

--- a/packages/kbn-expect/package.json
+++ b/packages/kbn-expect/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kbn/expect",
   "main": "./expect.js",
-  "types": "./expect.js.d.ts",
+  "typings": "./expect.d.ts",
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
