chore(NA): update kbn-monaco build

--- a/packages/kbn-monaco/BUILD.bazel
+++ b/packages/kbn-monaco/BUILD.bazel
@@ -48,7 +48,7 @@ webpack(
   name = "target_web",
   data = DEPS + [
     ":src",
-    ":webpack.config.js",
+    "webpack.config.js",
   ],
   output_dir = True,
   args = [
