--- a/x-pack/plugins/screenshotting/tsconfig.json
+++ b/x-pack/plugins/screenshotting/tsconfig.json
@@ -7,6 +7,8 @@
     "declarationMap": true
   },
   "include": [
+    "common/**/*",
+    "public/**/*",
     "server/**/*",
     "../../../typings/**/*"
   ],
