--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -79,6 +79,7 @@ filegroup(
       "//packages/kbn-ace:build_types",
       "//packages/kbn-alerts:build_types",
       "//packages/kbn-analytics:build_types",
+      "//packages/kbn-apm-utils:build_types",
       "//packages/kbn-i18n:build_types",
       "//packages/kbn-i18n-react:build_types",
   ],
