Revert "Removes resize-observer-polyfill types only"
This reverts commit 4982f406e45b36442b5e5f7ceac60898a8a3c7a7.

--- a/packages/kbn-ui-shared-deps-npm/BUILD.bazel
+++ b/packages/kbn-ui-shared-deps-npm/BUILD.bazel
@@ -53,6 +53,7 @@ RUNTIME_DEPS = [
   "@npm//react-router",
   "@npm//react",
   "@npm//regenerator-runtime",
+  "@npm//resize-observer-polyfill",
   "@npm//rison-node",
   "@npm//rxjs",
   "@npm//styled-components",
@@ -89,6 +90,7 @@ TYPES_DEPS = [
   "@npm//react-router",
   "@npm//react-router-dom",
   "@npm//regenerator-runtime",
+  "@npm//resize-observer-polyfill",
   "@npm//rison-node",
   "@npm//rxjs",
   "@npm//styled-components",
