--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -68,6 +68,7 @@
       "flot",
       "jest-styled-components",
       "@testing-library/jest-dom",
+      "resize-observer-polyfill",
       "@emotion/react/types/css-prop"
     ]
   }
