--- a/x-pack/plugins/security_solution/cypress/tsconfig.json
+++ b/x-pack/plugins/security_solution/cypress/tsconfig.json
@@ -15,6 +15,7 @@
       "cypress-file-upload",
       "cypress-pipe",
       "node",
+      "resize-observer-polyfill",
     ],
   },
   "references": [
