--- a/packages/kbn-optimizer/BUILD.bazel
+++ b/packages/kbn-optimizer/BUILD.bazel
@@ -51,6 +51,7 @@ RUNTIME_DEPS = [
   "@npm//node-sass",
   "@npm//normalize-path",
   "@npm//pirates",
+  "@npm//resize-observer-polyfill",
   "@npm//rxjs",
   "@npm//source-map-support",
   "@npm//watchpack",
@@ -76,6 +77,7 @@ TYPES_DEPS = [
   "@npm//jest-diff",
   "@npm//lmdb-store",
   "@npm//pirates",
+  "@npm//resize-observer-polyfill",
   "@npm//rxjs",
   "@npm//zlib",
   "@npm//@types/compression-webpack-plugin",
