--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
       "@emotion/core": [
         "typings/@emotion"
       ],
+      "resize-observer-polyfill": [
+        "typings/resize-observer-polyfill"
+      ]
     },
     // Support .tsx files and transform JSX into calls to React.createElement
     "jsx": "react",
