--- a/.buildkite/pipelines/performance/nightly.yml
+++ b/.buildkite/pipelines/performance/nightly.yml
@@ -19,11 +19,19 @@ steps:
       queue: c2-16
     key: build
 
-  - label: ":muscle: Performance Tests"
-    command: .buildkite/scripts/steps/functional/performance.sh
+  - label: ":muscle: Performance Tests with FTR config"
+    command: .buildkite/scripts/steps/functional/performance_ftr.sh
     agents:
       queue: ci-group-6
     depends_on: build
+    if: build.env('TEST_RUNNER') == null || build.env('TEST_RUNNER') == "FTR"
+
+  - label: ":muscle: Performance Tests with Synthetics config"
+    command: .buildkite/scripts/steps/functional/performance_synthetics.sh
+    agents:
+      queue: ci-group-6
+    depends_on: build
+    if: build.env('TEST_RUNNER') == "SYNTHETICS"
 
   - wait: ~
     continue_on_failure: true
