added back list prop as deprecated

--- a/x-pack/plugins/fleet/common/openapi/bundled.yaml
+++ b/x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -308,6 +308,11 @@ paths:
               schema:
                 type: object
                 properties:
+                  list:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/agent'
+                    deprecated: true
                   items:
                     type: array
                     items:
@@ -795,6 +800,11 @@ paths:
               schema:
                 type: object
                 properties:
+                  list:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/enrollment_api_key'
+                    deprecated: true
                   items:
                     type: array
                     items:
@@ -1582,9 +1592,6 @@ components:
           type: string
         unenrollment_started_at:
           type: string
-        shared_id:
-          type: string
-          deprecated: true
         access_api_key_id:
           type: string
         default_api_key_id:
