--- a/x-pack/plugins/fleet/common/openapi/paths/enrollment_api_keys.yaml
+++ b/x-pack/plugins/fleet/common/openapi/paths/enrollment_api_keys.yaml
@@ -9,6 +9,11 @@ get:
           schema:
             type: object
             properties:
+              list:
+                type: array
+                items:
+                  $ref: ../components/schemas/enrollment_api_key.yaml
+                deprecated: true
               items:
                 type: array
                 items:
