POC for rich text editor

--- a/package.json
+++ b/package.json
@@ -375,6 +375,8 @@
     "seedrandom": "^3.0.5",
     "semver": "^7.3.2",
     "set-value": "^4.1.0",
+    "slate": "^0.71.0",
+    "slate-react": "^0.71.0",
     "source-map-support": "^0.5.19",
     "stats-lite": "^2.2.0",
     "strip-ansi": "^6.0.0",
