--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "**/hoist-non-react-statics": "^3.3.2",
     "**/isomorphic-fetch/node-fetch": "^2.6.1",
     "**/istanbul-instrumenter-loader/schema-utils": "1.0.0",
+    "**/json-schema": "^0.4.0",
     "**/minimist": "^1.2.5",
     "**/node-jose/node-forge": "^0.10.0",
     "**/pdfkit/crypto-js": "4.0.0",
@@ -89,6 +90,7 @@
     "**/react-syntax-highlighter/**/highlight.js": "^10.4.1",
     "**/trim": "1.0.1",
     "**/typescript": "4.1.3",
+    "**/uglify-js": "^3.14.3",
     "**/underscore": "^1.13.1",
     "globby/fast-glob": "3.2.5"
   },
