fixed due to comments

--- a/x-pack/plugins/actions/server/saved_objects/mappings.json
+++ b/x-pack/plugins/actions/server/saved_objects/mappings.json
@@ -58,6 +58,9 @@
       },
       "createdAt": {
         "type": "date"
+      },
+      "updatedAt": {
+        "type": "date"
       }
     }
   }
