--- a/x-pack/plugins/fleet/common/openapi/entrypoint.yaml
+++ b/x-pack/plugins/fleet/common/openapi/entrypoint.yaml
@@ -30,6 +30,9 @@ paths:
     $ref: paths/agents@setup.yaml
   /agent-status:
     $ref: paths/agent_status.yaml
+    deprecated: true
+  /agent_status:
+    $ref: paths/agent_status.yaml
   /agents:
     $ref: paths/agents.yaml
   /agents/bulk_upgrade:
@@ -56,7 +59,13 @@ paths:
     $ref: paths/agent_policies@delete.yaml
   /enrollment-api-keys:
     $ref: paths/enrollment_api_keys.yaml
+    deprecated: true
   '/enrollment-api-keys/{keyId}':
+    $ref: 'paths/enrollment_api_keys@{key_id}.yaml'  
+    deprecated: true
+  /enrollment_api_keys:
+    $ref: paths/enrollment_api_keys.yaml
+  '/enrollment_api_keys/{keyId}':
     $ref: 'paths/enrollment_api_keys@{key_id}.yaml'
   /package_policies:
     $ref: paths/package_policies.yaml
