--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "**/chokidar": "^3.4.3",
     "**/deepmerge": "^4.2.2",
     "**/fast-deep-equal": "^3.1.1",
+    "**/handlebars/uglify-js": "^3.14.3",
     "**/hoist-non-react-statics": "^3.3.2",
+    "**/html-minifier/uglify-js": "^3.14.3",
     "**/isomorphic-fetch/node-fetch": "^2.6.1",
     "**/istanbul-instrumenter-loader/schema-utils": "1.0.0",
     "**/json-schema": "^0.4.0",
@@ -90,7 +92,6 @@
     "**/react-syntax-highlighter/**/highlight.js": "^10.4.1",
     "**/trim": "1.0.1",
     "**/typescript": "4.1.3",
-    "**/uglify-js": "^3.14.3",
     "**/underscore": "^1.13.1",
     "globby/fast-glob": "3.2.5"
   },
