--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -82,6 +82,7 @@ filegroup(
       "//packages/kbn-analytics:build_types",
       "//packages/kbn-apm-config-loader:build_types",
       "//packages/kbn-apm-utils:build_types",
+      "//packages/kbn-config:build_types",
       "//packages/kbn-i18n:build_types",
       "//packages/kbn-i18n-react:build_types",
   ],
