fix(NA): @kbn/utils build on windows native environment

--- a/packages/kbn-utils/BUILD.bazel
+++ b/packages/kbn-utils/BUILD.bazel
@@ -32,6 +32,7 @@ RUNTIME_DEPS = [
 
 TYPES_DEPS = [
   "//packages/kbn-config-schema",
+  "//packages/kbn-dev-utils",
   "@npm//load-json-file",
   "@npm//tslib",
   "@npm//@types/jest",
