--- a/packages/kbn-server-http-tools/BUILD.bazel
+++ b/packages/kbn-server-http-tools/BUILD.bazel
@@ -37,7 +37,7 @@ RUNTIME_DEPS = [
 ]
 
 TYPES_DEPS = [
-  "//packages/kbn-config-schema",
+  "//packages/kbn-config-schema:npm_module_types",
   "//packages/kbn-crypto",
   "@npm//@hapi/hapi",
   "@npm//@hapi/hoek",
