chore(NA): splits types from code on @kbn/dev-utils

--- a/packages/kbn-cli-dev-mode/BUILD.bazel
+++ b/packages/kbn-cli-dev-mode/BUILD.bazel
@@ -50,7 +50,7 @@ RUNTIME_DEPS = [
 TYPES_DEPS = [
   "//packages/kbn-config:npm_module_types",
   "//packages/kbn-config-schema:npm_module_types",
-  "//packages/kbn-dev-utils",
+  "//packages/kbn-dev-utils:npm_module_types",
   "//packages/kbn-logging",
   "//packages/kbn-optimizer",
   "//packages/kbn-server-http-tools",
@@ -60,12 +60,12 @@ TYPES_DEPS = [
   "@npm//chokidar",
   "@npm//elastic-apm-node",
   "@npm//execa",
+  "@npm//getopts",
   "@npm//moment",
   "@npm//rxjs",
   "@npm//supertest",
   "@npm//@types/hapi__h2o2",
   "@npm//@types/hapi__hapi",
-  "@npm//@types/getopts",
   "@npm//@types/jest",
   "@npm//@types/lodash",
   "@npm//@types/node",
