--- a/src/plugins/console/tsconfig.json
+++ b/src/plugins/console/tsconfig.json
@@ -6,7 +6,7 @@
     "declaration": true,
     "declarationMap": true
   },
-  "include": ["common/**/*", "public/**/*", "server/**/*"],
+  "include": ["common/**/*", "public/**/*", "server/**/*", "__jest__/**/*"],
   "references": [
     { "path": "../../core/tsconfig.json" },
     { "path": "../dev_tools/tsconfig.json" },
