--- a/packages/kbn-es-archiver/BUILD.bazel
+++ b/packages/kbn-es-archiver/BUILD.bazel
@@ -44,7 +44,7 @@ RUNTIME_DEPS = [
 ]
 
 TYPES_DEPS = [
-  "//packages/kbn-dev-utils",
+  "//packages/kbn-dev-utils:npm_module_types",
   "//packages/kbn-test",
   "//packages/kbn-utils",
   "@npm//@elastic/elasticsearch",
