--- a/package.json
+++ b/package.json
@@ -109,7 +109,6 @@
     "@elastic/ems-client": "8.0.0",
     "@elastic/eui": "41.0.0",
     "@elastic/filesaver": "1.1.2",
-    "@elastic/maki": "6.3.0",
     "@elastic/node-crypto": "1.2.1",
     "@elastic/numeral": "^2.5.1",
     "@elastic/react-search-ui": "^1.6.0",
@@ -196,8 +195,10 @@
     "archiver": "^5.2.0",
     "axios": "^0.21.1",
     "base64-js": "^1.3.1",
+    "bitmap-sdf": "^1.0.3",
     "brace": "0.11.1",
     "broadcast-channel": "^4.7.0",
+    "canvg": "^3.0.9",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.10",
     "chokidar": "^3.4.3",
