--- a/packages/kbn-securitysolution-hook-utils/BUILD.bazel
+++ b/packages/kbn-securitysolution-hook-utils/BUILD.bazel
@@ -71,6 +71,7 @@ ts_project(
   args = ["--pretty"],
   srcs = SRCS,
   deps = TYPES_DEPS,
+  resolve_json_module = True,
   declaration = True,
   declaration_map = True,
   emit_declaration_only = True,
