--- a/package.json
+++ b/package.json
@@ -703,6 +703,7 @@
     "cypress-react-selector": "^2.3.13",
     "cypress-real-events": "^1.5.1",
     "cypress-recurse": "^1.13.1",
+    "cypress-slack-reporter": "^1.0.0",
     "debug": "^2.6.9",
     "delete-empty": "^2.0.0",
     "dependency-check": "^4.1.0",
@@ -783,8 +784,9 @@
     "mkdirp": "0.5.1",
     "mocha": "^8.2.1",
     "mocha-junit-reporter": "^2.0.0",
-    "mochawesome": "^6.2.1",
-    "mochawesome-merge": "^4.2.0",
+    "mochawesome": "^7.0.1",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.0.1",
     "mock-fs": "^5.1.2",
     "mock-http-server": "1.3.0",
     "ms-chromium-edge-driver": "^0.4.2",
