--- a/packages/BUILD.bazel
+++ b/packages/BUILD.bazel
@@ -92,6 +92,7 @@ filegroup(
       "//packages/kbn-es-query:build_types",
       "//packages/kbn-i18n:build_types",
       "//packages/kbn-i18n-react:build_types",
+      "//packages/kbn-mapbox-gl:build_types",
   ],
 )
 
